<resources>
    <string name="app_name">MediCare</string>

    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="create_an_account">Create a new account</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="you_already_have_an_account_log_in">You already have an account! log in</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="terms_and_conditions">Terms of use</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="skip">skip</string>
    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Email or Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="all_services_are_reserved_for_homecare_app">All rights are reserved for this App</string>
    <string name="language_setting">Change Language</string>
    <string name="about_us">About Us</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="suc">Success !</string>
    <string name="pass_short">password too short</string>
    <string name="accept_terms_and_conditions">Accept terms and conditions</string>
    <string name="ch_gender">Choose gender</string>
    <string name="register">Sign up</string>
    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="inv_phone">Invalid phone</string>

    <string name="perm_image_denied">Permission image denied</string>
    <string name="upload_image">Upload Image</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="open">Opened</string>
    <string name="close">Closed</string>
    <string name="duration">Duration</string>
    <string name="cost">Cost</string>
    <string name="sar">SAR</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birth_date">Birth Date</string>
    <string name="change">Change</string>
    <string name="day_month_year">Day/Month/Year</string>
    <string name="ch">Choose</string>
    <string name="ch_dur">Choose duration</string>


    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your phone number</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="inc_code">Incorrect code</string>
    <string name="time">time</string>
    <string name="age">Age</string>
    <string name="date">date</string>
    <string name="address">address</string>
    <string name="select">select</string>
    <string name="order_sent">order sent</string>
    <string name="user_not_found">User not found</string>
    <string name="no_search_results">No search results</string>
    <string name="confirmation">Confirmation</string>
    <string name="pending">Pending</string>
    <string name="current">Current</string>
    <string name="no_reservations_to_show">No Reservations to Show</string>
    <string name="reservation_number">Reservation Number</string>
    <string name="book_date">Book Date</string>
    <string name="book_time">Book Time</string>
    <string name="no_product_to_show">No Product to Show</string>
    <string name="update_profile">Update Profile</string>
    <string name="check">Check App</string>
    <string name="re_password">Re-Password</string>
    <string name="use_fingerprint">Use Fingerprint</string>
    <string name="user_type">User Type</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="lab_tech">Lab Technician</string>
    <string name="nurse">Nurse</string>
    <string name="country_code">Country Code</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="put_your_finger_on_sensor">Put your finger on sensor to verify your identity</string>
    <string name="fingerprint_authentication">Fingerprint Authentication</string>
    <string name="your_device_not_support_fingerprint">Your device not support fingerprint</string>
    <string name="no_finger">No fingerprint configured. Please register at least one fingerprint in your device\'s Settings</string>
    <string name="enable_lockscreen">Please enable lock screen security in your device</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="ch_dept">Choose Department</string>
    <string name="ch_appoint">Choose Appointment</string>
    <string name="pas_not_match">Password not match</string>
    <string name="ch_user_type">Choose user type</string>
    <string name="ch_birth_date">Choose Birth Date</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="department">Department</string>
    <string name="day">Day</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="add">Add</string>
    <string name="sign_in_or_sign_up">Sign In -Or- Sign Up</string>
    <string name="available_doctor">Available Doctor</string>
    <string name="provided_services">Provided Services</string>
    <string name="city">City</string>
    <string name="ch_blood">Choose Blood Type</string>
    <string name="or">OR</string>
    <string name="Age">Age</string>
    <string name="Sex">Sex</string>
    <string name="DOB">DOB</string>
    <string name="BGroup">B Group</string>
    <string name="UType">User Type</string>
    <string name="UName">User Name</string>
    <string name="PersonalInfo">Personal Info</string>
    <string name="appointment">Appointment</string>
    <string name="viewReports">View Reports</string>
    <string name="RemainingBills">Remaining Bills</string>
    <string name="GiveFeedback">Give/View Feedback</string>
    <string name="sendfeedback">Send Feedback</string>
    <string name="doctor_info">Doctor Information</string>
    <string name="problem">Problem : </string>
    <string name="apply">Apply</string>
    <string name="feedback">Feedback</string>
    <string name="no_doctors_available">No Doctors Available</string>
    <string name="fees">Fees : </string>
    <string name="dates">Dates :</string>
    <string name="add_specialization">Add Specialization</string>
    <string name="Apply_leaves">Apply Leaves</string>
    <string name="SetTiming">Set Your Referrel Timings</string>
    <string name="UploadReport">Upload Current Patient Report</string>
    <string name="ViewStaff">View Staff Assigned</string>
    <string name="reserve_appointment">Reserve Appointment</string>
    <string name="available_appointments">Available Appointments</string>
    <string name="no_apppint_aval">No Appointments Available</string>
    <string name="feedback2">Feedback...</string>
    <string name="no_feedback_to_show">No Feedback To Show</string>
    <string name="inv_code">Invalid sms code</string>
    <string name="my_reservations">My Reservations</string>
    <string name="today">Today</string>
    <string name="all_appointments">All Reservations</string>
    <string name="finished">Finished</string>
    <string name="no_nurses_assigned">No Nurses Assigned</string>
    <string name="inv_pass">invalid password , insert  ( Capital char , small char , number , special char )</string>
    <string name="search2">Search</string>
    <string name="email_address_search">Email address search...</string>
    <string name="accept">Accept</string>
    <string name="report">Report</string>
    <string name="done">Done</string>
    <string name="no_reservations">No reservations</string>
    <string name="view_doctor_assigned">View Doctor Assigned</string>
    <string name="reservations">Reservations</string>
    <string name="no_assigned_doctor">No Assigned Doctor</string>
    <string name="no_reports_to_show">No Reports To Show</string>
    <string name="view_lab_technician_reports">View Lab technician Reports</string>
    <string name="no_technician_available">No Technician Available</string>
    <string name="show_report">Show Report</string>
    <string name="choose">Choose</string>
    <string name="view_orders">View Orders</string>
    <string name="send_report">Send Report</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="UpdatePersonalInfo">Update Personal Info</string>
    <string name="change_password">change password</string>
    <string name="current_password">current password</string>
    <string name="repeat_password">repeat password</string>
    <string name="reset_password">reset password</string>
    <string name="email_req">Email Required</string>
    <string name="pass_req">Password required</string>
    <string name="pass_to_short">Password too short</string>
    <string name="new_pas_req">New Password Required</string>
    <string name="new_pass">new password</string>
    <string name="Forget_Password">Forget Password</string>
    <string name="pass_not_eq">Password does not match</string>

</resources>
