<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>


        <variable
            name="userModel"
            type="com.check.apps.checkapp.models.UserModel" />


    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities_fragments.activity_main.MainActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            android:scrollbars="none"
            android:background="@color/white"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:background="@color/black"
                        />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{"Dr."+userModel.name}'
                        android:layout_gravity="center"
                        android:textColor="@color/white"                        android:textSize="30sp"
                        />
                </FrameLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPersonalInfo"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:contentPadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/PersonalInfo"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardPersonalInfoUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:contentPadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/UpdatePersonalInfo"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardMyReservation"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:contentPadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/my_reservations"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardApply_leaves"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:contentPadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/Apply_leaves"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSetTiming"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:contentPadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/SetTiming"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardUploadReport"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:contentPadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:visibility="gone"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/UploadReport"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewStaff"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:contentPadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/ViewStaff"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardLabTech"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:contentPadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/lab_tech"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewLabTechReport"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:contentPadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/view_lab_technician_reports"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:contentPadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/change_password"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardLogout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="3dp"
                    app:cardBackgroundColor="@color/white"
                    app:contentPadding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:text="@string/logout"
                        android:clickable="false"
                        android:longClickable="false"
                        />


                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
